# cellular-automata-game-of-life

./: .gitignore  Cargo.toml  Dockerfile  README.md  run.js  setup_web.sh  start_server.bat  start_server.sh
docs/: index.html  sw.js  vaja_1.js
src/: main.rs
src/app/: mod.rs
src/app/world/: mod.rs
